--- a/apps/accountCenterModule/config/config.json
+++ b/apps/accountCenterModule/config/config.json
@@ -6,7 +6,7 @@
     {
       "DbType": "mysql",
       "IsMaster": true,
-      "Dsn": "root:Password1!@tcp(172.0.0.20:3306)/gh_digital_employee?charset=utf8mb4",
+      "Dsn": "root:R7sj&2sk@tcp(localhost:33306)/db_test?charset=utf8mb4&parseTime=true&loc=Local&timeout=10s&readTimeout=10s&writeTimeout=10s&maxAllowedPacket=0&interpolateParams=true&multiStatements=false",
       "sqlMaxIdleConns": 1,
       "sqlMaxOpenConns": 1,
       "sqlLogLevel": 2
